<!-- Archivo strings.xml (ES) -->
<!-- Este archivo NO se modifica en el apartado 1.6.4 -->
<!-- Aquí mantenemos los textos en español -->


<!-- Archivo strings.xml -->
<resources>

    <!-- Nombre de la app -->
    <string name="app_name">Mi Bloc de Notas</string>

    <!-- Mensaje de bienvenida -->
    <string name="welcome_message">¡Bienvenido!</string>

    <!-- Texto del botón -->
    <string name="btn_show_message">Mostrar mensaje</string>

    <!-- Mensaje que se mostrará al pulsar el botón -->
    <string name="note_message">Aquí podrás escribir tus notas</string>
    <string name="subtitle">Tu blog de notas</string>


    <!-- Nuevos textos para este apartado -->
    <string name="label_title">Bloc de Notas</string>
    <string name="label_description">Esta app te permitirá guardar ideas y recordatorios.</string>



    <!--Nuevos textos para el apartado de información -->
    <string name="info_text">Este es un bloque informativo dentro de un layout.</string>
    <string name="label_description2">El texo por el que se cambia el label_description</string>
    <string name="cardTextDemo">Esta tarjeta demuestra la elevación en Material 3</string>
    <string name="theme_Switch">Cambio de tema</string>
    <string name="dimens_pen">Vector de UN LAPIZ escalado mediante dimens</string>

</resources>
