<?xml version="1.0" encoding="utf-8"?>

<!-- Layout principal de la app -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/info_bg_default">

    <!--Icono de la app-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_nota"
        android:id="@+id/imgIcon"
        android:contentDescription="TODO">

    </ImageView>

    <!-- Título de la app -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_title"
        android:textSize="40sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_gravity="center"

        android:textStyle="bold"/>

    <!-- Descripción -->
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_description"
        android:layout_gravity="center"

        android:layout_marginTop="8dp"/>

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="16dp"/>

    <!-- Botón -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryMaterialButtonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/btn_show_message" />

    <!-- Switch para cambiar de tema -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:hint="@string/theme_Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
    </com.google.android.material.switchmaterial.SwitchMaterial>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="16dp"
        style="@style/DemoCardStyle">

        <TextView
            android:id="@+id/cardTextDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardTextDemo"
            android:textSize="16sp"
            android:layout_margin="16dp"
            />

    </com.google.android.material.card.MaterialCardView>



    <!-- Bloque de información -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/info_bg_default"
        android:id="@+id/infoBlock">

        <!--Nuevo icono de lápiz-->
        <ImageView

            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:src="@drawable/ic_lapiz"
            android:id="@+id/imgPencil"
            android:layout_margin="12dp"
            android:contentDescription="@string/dimens_pen">
        </ImageView>

        <!--Texto de información-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_gravity="center"
            android:text="@string/info_text"
            style="@style/InfoTextStyle"
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/txtInfo">
        </TextView>
    </LinearLayout>

    <!-- Icono GRANDE de nota -->
    <ImageView
        android:id="@+id/imBigNote"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_nota_grande"
        android:layout_marginTop="24dp"
        style="@style/InfoTextStyle"
        android:contentDescription="TODO">
    </ImageView>


</LinearLayout>
